--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -19,14 +19,12 @@
                     &nbsp;
                     <div class="popover">
                         <ul>
-                            {% for obj in data[0].values()|sort(attribute="name") %}
+                            {% for state in states.values()|sort(attribute="name") %}
                                 <li>
-                                    <h2>{{ obj.name }}:</h2>                                    
+                                    <h2>{{ state.name }}:</h2>                                    
                                     <ul>
-                                        {% for obj in data[1].values()|sort(attribute="name") %}
-                                            {% if obj.id == obj.state_id %}
-                                                <li>{{ obj.name}}</li>
-                                            {% endif %}
+                                        {% for city in state.cities|sort(attribute="name") %}
+                                           <li>{{ city.name}}</li>
                                         {% endfor %}
                                     </ul>
                                 </li>
@@ -39,8 +37,8 @@
                     &nbsp;
                     <div class="popover">
                         <ul>
-                            {% for obj in data[2].values()|sort(attribute="name") %}
-                                <li>{{ obj.name }}</li>
+                            {% for amenity in amenities.values()|sort(attribute="name") %}
+                                <li>{{ amenity.name }}</li>
                             {% endfor %}
                         </ul>
                     </div>
